# pycli-template

./: CHANGELOG.md  README.md  pyproject.toml
src/pycli_template/: main.py
src/{project_name}/: cli.py
tests/: test_cli.py
{project_name}/: cli.py
