[project]
name = "pycli-template"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-simple-blog>=0.2.0",
    "pytest>=8.4.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]
authors = [
    { name = "rockleona", email = "34214497+rockleona@users.noreply.github.com" }
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[project.scripts]
foo = "pycli_template.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycli_template"]